fix: Change color to calculator buttons to add more contrast

--- a/style.css
+++ b/style.css
@@ -127,3 +127,6 @@
   transition: 2.5s;
   transform: rotateY(180deg);
 }
+.btn {
+  color: cornsilk;
+}
